--- a/store/css/style.css
+++ b/store/css/style.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
   font-size: 16px;
   color: white;
@@ -31,7 +37,6 @@ button {
   background: linear-gradient(to left, #8942a8, #ba382f);
   overflow: hidden;
 }
-
 .banner .stock-limit {
   position: absolute;
   top: 0;
@@ -46,7 +51,6 @@ button {
   flex-direction: column;
   display: none;
 }
-
 .banner .stock-limit em {
   position: absolute;
   width: 80%;
@@ -65,7 +69,8 @@ button {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.75);
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   display: none;
 }
 
@@ -86,6 +91,7 @@ button {
   height: 25px;
   background: white;
   overflow: hidden;
+  -webkit-animation: animation 20s linear infinite;
   animation: animate 20s linear infinite;
   bottom: -120px;
 }
@@ -94,6 +100,7 @@ button {
   left: 86%;
   width: 80px;
   height: 80px;
+  -webkit-animation-delay: 0s;
   animation-delay: 0s;
 }
 
@@ -101,7 +108,9 @@ button {
   left: 12%;
   width: 30px;
   height: 30px;
+  -webkit-animation-delay: 1.5s;
   animation-delay: 1.5s;
+  -webkit-animation-duration: 10s;
   animation-duration: 10s;
 }
 
@@ -109,6 +118,7 @@ button {
   left: 70%;
   width: 100px;
   height: 100px;
+  -webkit-animation-delay: 5.5s;
   animation-delay: 5.5s;
 }
 
@@ -116,7 +126,9 @@ button {
   left: 42%;
   width: 150px;
   height: 150px;
+  -webkit-animation-delay: 0s;
   animation-delay: 0s;
+  -webkit-animation-duration: 15s;
   animation-duration: 15s;
 }
 
@@ -124,6 +136,7 @@ button {
   left: 65%;
   width: 40px;
   height: 40px;
+  -webkit-animation-delay: 0s;
   animation-delay: 0s;
 }
 
@@ -131,10 +144,22 @@ button {
   left: 15%;
   width: 110px;
   height: 110px;
+  -webkit-animation-delay: 3.5s;
   animation-delay: 3.5s;
+  -webkit-animation-duration: 15s;
   animation-duration: 15s;
 }
 
+@-webkit-keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100vh) rotate(360deg);
+    opacity: 0;
+  }
+}
 @keyframes animate {
   0% {
     transform: translateY(0) rotate(0deg);
@@ -145,7 +170,6 @@ button {
     opacity: 0;
   }
 }
-
 .fa-shopping-cart {
   position: absolute;
   right: 2rem;
@@ -170,7 +194,10 @@ button {
   font-weight: 600;
   top: 1rem;
   right: 1.5rem;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .main-cart {
@@ -195,7 +222,6 @@ button {
   box-shadow: 0 7px 5px -5px #4d4b4b;
   transition: 0.5s;
 }
-
 .card .img-container {
   position: absolute;
   height: 185px;
@@ -205,12 +231,10 @@ button {
   right: 0;
   transform: translateY(35px);
 }
-
 .card .img-container img {
   width: 100%;
   align-self: center;
 }
-
 .card .img-container .out-of-stock-cover {
   position: absolute;
   width: 100%;
@@ -220,7 +244,6 @@ button {
   align-items: center;
   display: none;
 }
-
 .card .img-container .out-of-stock-cover span {
   font-weight: 900;
   color: rgba(255, 200, 200, 0.75);
@@ -234,11 +257,9 @@ button {
   align-items: baseline;
   padding: 0 1rem;
 }
-
 .top-bar .fa-apple {
   font-size: 1.5rem;
 }
-
 .top-bar .stocks {
   font-size: 0.8rem;
   color: lightgreen;
@@ -355,7 +376,6 @@ button {
   top: 10%;
   flex-direction: column;
 }
-
 .side-nav .cart-items .empty-cart {
   margin: auto 0;
   font-size: 2rem;
@@ -371,17 +391,14 @@ button {
   justify-content: space-around;
   border-bottom: 1px solid whitesmoke;
 }
-
 .side-nav .cart-items .cart-item:hover {
   background: rgba(255, 255, 255, 0.25);
 }
-
 .side-nav .cart-items .cart-item .cart-img {
   width: 5rem;
   height: 5rem;
   justify-content: center;
 }
-
 .side-nav .cart-items .cart-item .cart-img img {
   width: 100%;
   align-self: center;
@@ -429,7 +446,6 @@ button {
   border-radius: 50%;
   padding: 2px 5px;
 }
-
 .btn-qty:hover {
   background: white;
   color: black;
@@ -453,68 +469,56 @@ button {
   border-radius: 20px;
   transition: 0.25s;
 }
-
 .invoice .shipping-items {
   padding: 10px 0;
   width: 100%;
   justify-content: space-between;
 }
-
 .invoice .shipping-items .item-names,
 .invoice .shipping-items .items-price {
   flex-direction: column;
   justify-content: space-around;
 }
-
 .invoice .payment {
   flex-direction: column;
 }
-
 .invoice .payment em,
 .invoice .payment div {
   margin-top: 10px;
   font-weight: 600;
   justify-content: space-between;
 }
-
 .invoice .order {
   position: absolute;
   bottom: 10%;
   width: 40%;
   justify-content: space-around;
 }
-
 .invoice .order .btn {
   padding: 1rem 2rem;
   border-radius: 10px;
   font-size: 1.2rem;
 }
-
 .invoice .order .btn-order {
   background: #00bbf9;
 }
-
 .invoice .order .btn-cancel {
   background: #bb342f;
 }
-
 .invoice .order-details {
   height: 300px;
   flex-direction: column;
   justify-content: space-around;
 }
-
 .invoice .order-details em,
 .invoice .order-details p {
   border-bottom: 1px dashed white;
   padding-bottom: 10px;
 }
-
 .invoice .order-details em {
   font-size: 1.2rem;
   font-weight: 600;
 }
-
 .invoice .order-details .thanks {
   position: absolute;
   text-align: center;
@@ -524,11 +528,9 @@ button {
   right: 0;
   bottom: 55%;
 }
-
 .invoice .order-details p {
   font-size: 1.1rem;
 }
-
 .invoice .order-details p span {
   font-weight: 600;
 }
@@ -557,7 +559,6 @@ button {
     overflow: scroll;
   }
 }
-
 @media (max-width: 576px) {
   .side-nav {
     width: 100%;
@@ -572,7 +573,8 @@ button {
     width: 576px;
     height: 4rem;
     background: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
     filter: invert(1);
   }
   .main-cart {
@@ -585,5 +587,4 @@ button {
   .main-cart .card {
     margin: 20px auto;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
