thanh toán gio hang

--- a/store/css/style.scss
+++ b/store/css/style.scss
@@ -492,6 +492,7 @@ button {
     flex-direction: column;
     border-radius: 20px;
     transition: 0.25s;
+    display: none;
     .shipping-items {
         padding: 10px 0;
         width: 100%;
