--- a/store/css/style.css
+++ b/store/css/style.css
@@ -468,6 +468,7 @@ button {
   flex-direction: column;
   border-radius: 20px;
   transition: 0.25s;
+  display: none;
 }
 .invoice .shipping-items {
   padding: 10px 0;
